Release history for xiate

next
  [Changed]
  - Update geometry hints when changing font or font size.
  - The deprecated GRegex API is no longer being used by xiate.

  [Added]
  - xiate now responds to resize requests of terminal applications.

v16.10  2016-10-29
  [Changed]
  - Multiple fonts can be specified and you can switch during runtime.

v16.08  2016-08-20
  [Added]
  - Foreground color of text under the cursor can be customized.

v16.06  2016-06-26
  [Changed]
  - Don't try to reduce flickering by setting the GtkWindow's background
    color anymore. This issue appears to have resolved itself (other VTE
    terminals are fine, too).
  - "internal_border" has been removed from config.h. If you really want
    to use an internal border, put this in your ~/.config/gtk-3.0/gtk.css:

        vte-terminal {
            padding: 30px;
        }

v16.05  2016-05-03
  - Update for slightly new VTE API.

v16.01  2016-01-05
  [Fixed]
  - Properly set X11 window title on the child application's request.
    Changing icon names is no longer officially supported, though.
  - Improve window size of newly created floating windows: Set geometry
    hints and use the correct font.

  [Changed]
  - Makefile also installs the default client.
  - Use CSS to set the "internal border". This results in the actual
    border being one pixel smaller than before.
  - "args_default" has been replaced by the boolean option "login_shell".
    We now autodetect your shell.
  - xiate now expects at least VTE version 0.42.

v15.10  2015-10-04
  - This is the initial release of xiate.
  - Daemon, client, manpages.